--- a/lesson3-spring-mvc/src/main/webapp/WEB-INF/views/product.html
+++ b/lesson3-spring-mvc/src/main/webapp/WEB-INF/views/product.html
@@ -36,7 +36,7 @@
     <div class="row py-2">
         <div class="col-12">
 <!--            <a class="btn btn-success" method="post" th:href="@{product/add}">Add Product</a>-->
-            <a class="btn btn-success" th:href="@{/add-product}">Add Product</a>
+            <a class="btn btn-success" th:href="@{/product/new}">Add Product</a>
 
         </div>
 
@@ -57,7 +57,7 @@
                     <td th:text="${product.cost}">10</td>
                     <td>
                         <a class="btn btn-success" th:href="@{/product/{id}(id = ${product.id})}"><i class="fas fa-edit"></i></a>
-                        <a class="btn btn-danger" href="#"><i class="far fa-trash-alt"></i></a>
+                        <a class="btn btn-danger"  th:href="@{/product/delete/{id}(id = ${product.id})}"><i class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
                 </tbody>
