Подключение hibernate в отдельном модуле

--- a/lesson4-spring-boot/src/main/resources/templates/product.html
+++ b/lesson4-spring-boot/src/main/resources/templates/product.html
@@ -35,8 +35,8 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <!--            <a class="btn btn-success" method="post" th:href="@{product/add}">Add Product</a>-->
-            <a class="btn btn-success" th:href="@{/product/new}">Add Product</a>
+            <!--            <a class="btn btn-success" method="post" th:href="@{product/add}">Add ru.karaban.model.Product</a>-->
+            <a class="btn btn-success" th:href="@{/product/new}">Add ru.karaban.model.Product</a>
 
         </div>
 
