Добавил простые фильтры

--- a/lesson7-spring-boot-hibernate/src/main/resources/templates/product.html
+++ b/lesson7-spring-boot-hibernate/src/main/resources/templates/product.html
@@ -40,6 +40,30 @@
 
         </div>
 
+        <div class="col-12 mt-3">
+            <form class="form-inline">
+                <div class="form-group mb-2 mr-2">
+                    <label for="titleFilter" class="sr-only">Title filter</label>
+                    <input type="text" class="form-control" id="titleFilter"
+                           name="titleFilter" placeholder="Title filter">
+                </div>
+
+                <button type="submit" class="btn btn-primary mb-2">Apply</button>
+            </form>
+        </div>
+
+        <div class="col-12 mt-3">
+            <form class="form-inline">
+                <div class="form-group mb-2 mr-2">
+                    <label for="costFilter" class="sr-only">Cost filter</label>
+                    <input type="text" class="form-control" id="costFilter"
+                           name="costFilter" placeholder="Cost filter">
+                </div>
+
+                <button type="submit" class="btn btn-primary mb-2">Apply</button>
+            </form>
+        </div>
+
         <div class="col-12">
             <table class="table table-bordered my-2">
                 <thead>
